--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,64 +1,51 @@
+:root {
+	--main-color:       rgb(189, 176, 128);
+	--main-color-light: rgba(189, 176, 128, 0.4);
+	--purple-bg:        rgb(34, 66, 98);
+	--purple-bg-dark:   rgba(6, 20, 35);
+}
+
 body, html {
-  font-size: 16px;
-  width: 100%;
-  height: 100%;
-  min-width: 100%;
-  min-height: 100%;
-  overflow-x: hidden;
-  box-sizing: border-box;
+	width:      100vw;
+	height:     100vh;
+	min-width:  100vw;
+	min-height: 100vh;
+	max-width:  100%;
+	max-height: 100%;
+	overflow-x: hidden;
+	box-sizing: border-box;
+
+	margin:     0;
+	padding:    0;
 }
 
 *, *:before, *:after {
-  box-sizing: inherit;
+	box-sizing: inherit;
 }
 
 body {
+	color:           var(--main-color);
+	font-family:     'Josefin Sans', sans-serif;
+	font-size:  18px;
+	text-align:      center;
 
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background: url(https://images.unsplash.com/photo-1505744386214-51dba16a26fc?crop=entropy&cs=srgb&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTYzMjUxMzYzMw&ixlib=rb-1.2.1&q=85) no-repeat center center / cover;
+	height:          100vh;
+	background:      url(../img/fwcc2022-bg.jpg) no-repeat center center / cover;
+	line-height: 1;
 }
 
-#result {
-  transform: translateX(-25%);
-  font-size: 64px;
-}
+.inner {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 
-#history {
-  position: fixed;
-  left: 0;
-  top: 0;
-  text-align: left;
-  width: 10vw;
-  height: 100vh;
-  padding: 1.5em;
-  overflow-y: auto;
 
-  -webkit-transition: all .5s ease-in-out;
-  -moz-transition: all .5s ease-in-out;
-  -o-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-}
-#history.closed {
-  left: -10vw;
-}
-
-#history_toggler {
-  position: fixed;
-  top: 1em;
-  left: 10vw;
-  -webkit-transition: all .5s ease-in-out;
-  -moz-transition: all .5s ease-in-out;
-  -o-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-}
-#history_toggler.closed {
-  top: 1em;
-  left: 0;
+	display:         flex;
+	flex-direction:  column;
+	justify-content: center;
+	align-items:     center;
 }
 
 h1,
@@ -68,47 +55,63 @@ h4,
 h5,
 h6,
 label {
-  font-family: "Special Elite", cursive;
+	font-family: 'Berkshire Swash', cursive;
 }
 
-#edit_panel {
-  position: fixed;
-  bottom:0;
-  width: 100%;
-  padding: 3em;
+#result {
+	font-size: 15vw;
+
+	max-width: 1200px;
+}
+
+.dit-delimiter {
+	font-size: 0.7em;
+	margin-right: 10px;
+}
+
+
+.word-value {
+	font-size: 0.9em;
+}
+
+.dit {
+	display: block;
 }
 
 .button {
-  border-radius: 10px;
-  border: 2px solid #173673;
-  background: #2173A6;
-  color: #fff;
-  padding: 0.5em 1em;
-  cursor: pointer;
+	color:           var(--purple-bg);
+	/*text-transform:  uppercase;*/
+
+	font-weight:     600;
+	text-decoration: none;
+	margin:          1rem;
+	padding:         0.5rem;
+	border:          2px solid var(--purple-bg);
+	border-radius:   0.5rem;
+	position:        relative;
+	top:             0;
+	transition:      all 300ms ease-in-out;
+	box-shadow:      0 0.6em var(--purple-bg-dark), 0 0.9em var(--purple-bg);
+	cursor:          pointer;
+
+	display:         inline-block;
+	margin-top:      20vh;
 }
+
 .button:hover {
-  border: 2px solid #2173A6;
-  background: #173673;
+	background: var(--purple-bg-dark);
+	color:      white;
+	top:        0.2em;
+	box-shadow: 0 0.4em var(--purple-bg-dark), 0 0.7em var(--purple-bg);
 }
 
-#regenerate {
-  margin-top: 60px;
-  transform: translateX(-25%);
-  font-size: 22px;
-}
 
-.row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
+@media (min-width: 769px) {
+	body {
+		font-size: 1.2vw;
+	}
 
-.row > * {
-  padding: 0 1em;
-}
-
-input[type=text] {
-  padding: 0.5em 1em;
-  border: 0;
+	#result {
+		font-size: 7vw;
+	}
 }
