--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,11 @@
 	--purple-bg-dark:   rgba(6, 20, 35);
 }
 
+*::selection {
+	background: var(--main-color);
+	color:      var(--purple-bg-dark);
+}
+
 body, html {
 	width:      100vw;
 	height:     100vh;
@@ -24,22 +29,22 @@ body, html {
 }
 
 body {
-	color:           var(--main-color);
-	font-family:     'Josefin Sans', sans-serif;
-	font-size:  18px;
-	text-align:      center;
+	color:       var(--main-color);
+	font-family: 'Josefin Sans', sans-serif;
+	font-size:   18px;
+	text-align:  center;
 
-	height:          100vh;
-	background:      url(../img/fwcc2022-bg.jpg) no-repeat center center / cover;
+	height:      100vh;
+	background:  url(../img/fwcc2022-bg.jpg) no-repeat center center / cover;
 	line-height: 1;
 }
 
 .inner {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+	position:        fixed;
+	top:             0;
+	left:            0;
+	width:           100%;
+	height:          100%;
 
 
 	display:         flex;
@@ -65,7 +70,7 @@ label {
 }
 
 .dit-delimiter {
-	font-size: 0.7em;
+	font-size:    0.7em;
 	margin-right: 10px;
 }
 
